Enhanced test scripts with proper documentation and test data is coming from json now

--- a/document.html
+++ b/document.html
@@ -203,7 +203,10 @@
 cd planit-playwright-e2e
 npm install
 npx playwright install
-npx playwright test</code></pre>
+
+To Run in Staging: npm run test:staging
+To Run in Production: npm run test:production
+</code></pre>
 
   <h2 id="reporting">🔍 Reporting & Debugging</h2>
   <ul>
